# xLH-mims

./: .gitignore  Dockerfile_xlh_mims_python  LICENSE  Makefile  README.md  compose_xlh_mims.yaml  docker_compose_xlh_mims.yaml  docker_compose_xlh_mims_win.yaml  docker_xlh_mims_python.sh  jupyter.bat  linux_compose_xlh_mims.yaml  main.bat  main.sh  main_cert.bat  marimo.bat  notes.md  pyproject.toml  win_compose_xlh_mims.yaml  win_docker_update.bat  win_docker_update_log.bat  win_py_0_remove_venv.bat  xlh_mims_docker_install.bat  xlh_mims_docker_install.sh  xlh_mims_docker_install_curl.bat
app/: README.md  main.py
app/core/toolbox/: cookies.py  streamlit_middleware.py
app/static/docs/: guide_1.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
app/static/docs/.doctrees/: environment.pickle  guide_1.doctree  index.doctree  introduction.doctree
app/static/docs/_sources/: introduction.md.txt
app/static/docs/_static/: pygments.css
app_ui/: main_ui.py
app_ui/.streamlit/: config.toml
app_ui/pages_/: home.py
app_ui/pages_/account/: settings.py
app_ui/pages_/demo/: demo_1.py
app_ui/toolbox/: page_config.py  text_functions.py
docs/: conf.py
docs/_build/: .buildinfo  alongside-fastapi-and-co.html  connecting-to-the-broker.html  genindex.html  index.html  searchindex.js
docs/_build/.doctrees/: alongside-fastapi-and-co.doctree  connecting-to-the-broker.doctree  environment.pickle  index.doctree
docs/_build/_sources/: index.md.txt
misc/: LINKS.md  README_OLD.md  linux_compose_xlh_mims.yaml  notes.md
notebooks/marimo/src/: demo_api_call.py  demo_api_call_models.py
notebooks/marimo/src/__marimo__/session/: demo_api_call.py.json
notebooks/marimo/src/examples/: README.md
notebooks/marimo/src/examples/github_examples/: .pre-commit-config.yaml  README.md
notebooks/marimo/src/examples/github_examples/.github/: PULL_REQUEST_TEMPLATE.md
notebooks/marimo/src/template/: marimo_template_dark_mode.py
notebooks/settings/: run_jupyterlab.py
notebooks/settings/config/: jupyter_notebook_config.py  migrated
notebooks/settings/config/lab/workspaces/: default-37a8.jupyterlab-workspace
notebooks/settings/data/: nbsignatures.db  notebook_secret
notebooks/src/: README.md
notebooks/src/ai_bp_hf/: agent_notebook.ipynb  color.json  config.py  llm_model.py  recipe.json  tools.py
notebooks/src/ai_oven/: agent.py  agent_notebook.ipynb  object_to_file.py  recipe.json  tools.py
notebooks/src/ai_oven_ollama_local_llm/: agent.py  agent_notebook.ipynb  agent_simple_notebook.ipynb  llm_model.py  recipe.json  response.json
notebooks/src/ai_oven_ollama_local_llm/.ipynb_checkpoints/: agent_notebook-checkpoint.ipynb
playground/: mongodb_1.py
playground/docker_install/: README.md
playground/docker_install/mkcert/: README.md
playground/marimo_nb/: README.md
(+9 files in other folders)
