[project]
name = "xLH-mims"
version = "0.1.0"
description = ""
authors = [
    { name = "Pascal Helfenstein", email = "pascal.helfenstein@xemax.ch" },
    { name = "Thomas Ruoss", email = "thomas.ruoss@xemax.ch" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "jinja2>=3.1.6",
    "fastapi>=0.122.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "jupyter>=1.1.1",
    "pydantic-ai>=1.25.1",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "matplotlib>=3.10.7",
    "deepl>=1.25.0",
    "chromadb>=1.3.5",
    "qdrant-client>=1.16.1",
    "plotly>=6.5.0",
    "openai>=2.8.1",
    "xlwings>=0.33.16",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "voyageai>=0.3.5",
    "pyclean>=3.4.0",
    "pytest>=9.0.1",
    "jupyterlab>=4.5.0",
    "streamlit>=1.54.0",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2025.8.25",
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
